<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/tv_name_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/nwme_event"
        android:paddingLeft="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/tv_type_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_name_c"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/event_type"
        android:paddingLeft="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />



    <EditText
        android:id="@+id/tv_class_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_type_c"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/descript_event"
        android:paddingLeft="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/tv_data_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_class_c"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:hint="@string/date_event"
        android:paddingLeft="10dp"
        android:textColorHint="#FFFFFF"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        android:inputType="date" />

    <Button
        android:id="@+id/button_node_c_1"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_data_c"
        android:layout_marginTop="20dp"
        android:background="@drawable/ripple_effect1"

        android:text="@string/add_note" />

    <Button
        android:id="@+id/button_exit_c"
        android:background="@drawable/ripple_effect2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button_node_c_1"

        android:text="@string/cancel" />


</RelativeLayout>