<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background= "?attr/colorPrimary">

    <TextView
        android:id="@+id/textViewAddUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/add_user"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        />


    <EditText
        android:id="@+id/AddIdUser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/add_id_user"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/AddUser"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_toEndOf="@+id/CancelNote"
            android:layout_toRightOf="@+id/CancelNote"
            android:text="@string/create"
            android:textColor="@color/colorPink" />

        <Button
            android:id="@+id/CancelAddUser"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/cancel"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>