<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:background="@color/colorPurpLight">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:text="@string/create_project"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#FFFFFF"/>

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/enter_photo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLogin"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="228dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_marginStart="130dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_toEndOf="@+id/button3"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/create"
            android:textColor="@color/colorPink" />

        <Button
            android:id="@+id/button3"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/cancel"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

    </RelativeLayout>
    <!--Button
        android:id="@+id/btnLogin"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="10dp"
        android:text="@string/create"
        android:textColor="@color/colorPink" />

    <Button
        android:id="@+id/button3"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:text="@string/cancel"
        android:textStyle="bold" /-->
</LinearLayout>